--- a/views/machines.ejs
+++ b/views/machines.ejs
@@ -1,14 +1,32 @@
-<%- include('partials/header'); -%>
+<%- include('partials/headerrent'); -%>
 <div class="forms">
 <h1>Rent machines</h1>
 <% mac.forEach(function(post){ %>
 
-    <h1>Type :<%= post.type1 %></h1>
+    <!-- <h1>Type :<%= post.type1 %></h1>
     <p>
         Price: <%= post.price%>
         Description: <%=post.description+'...'%> 
         <a href="/machine/<%=post._id%>">Read more</a>
-    </p>
+    </p> -->
+    <div class="card mb-3">
+        <div class="row no-gutters">
+          <div class="col-md-4">
+            <%  var imageURL="/upload/"+post.image %> 
+            <img src= <%= imageURL %>>
+          </div>
+          <div class="col-md-8">
+            <div class="card-body">
+              <h3 class="card-title">Type: <%= post.type1 %></h3>
+              <p class="card-text">Description: <%=post.description+'...'%>
+                <br>
+               <h5> License Plate: <%= post.licenseNumber%> </h5> </p>
+              <p class="card-text"><small class="text-muted"><h2>Rs:<%= post.price%>/perday</h2></small></p>
+              <a href="/machine/<%=post._id%>" class="btn btn-primary">View</a>  
+            </div>
+          </div>
+        </div>
+      </div>
 <%})%>
 </div>
 <%- include('partials/footer'); -%>
