--- a/views/partials/headerlogin.ejs
+++ b/views/partials/headerlogin.ejs
@@ -25,24 +25,14 @@
                 <a class="nav-link active" aria-current="page" href="#">Home</a>
                 </li>
                 <li class="nav-item">
-                <a class="nav-link" href="/appointment">Soil Testing</a>
+                <a class="nav-link" href="#">Link</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="/machines">Renting Machines</a>
+                <a class="nav-link" href="/login">login</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="/appointment">Online Trading</a>
+                <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
                 </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="/appointment">Video Streaming</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="/logout">Nearby Cold Storage</a>
-                </li>
-                <li class="nav-item">
-                <a class="nav-link" href="/logout">logout</a>
-                </li>
-
             </ul>
             </div>
         </div>
